--- a/package.json
+++ b/package.json
@@ -22,7 +22,38 @@
   },
   "homepage": "https://github.com/mzyy94/tductf-frontend",
   "devDependencies": {
-    "bower": "^1.4.1",
     "electron-prebuilt": "^0.30.4"
+  },
+  "dependencies": {
+    "better-console": "^0.2.4",
+    "del": "^1.2.1",
+    "extend": "^3.0.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-chmod": "^1.2.0",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-copy": "0.0.2",
+    "gulp-flatten": "^0.1.1",
+    "gulp-header": "^1.2.2",
+    "gulp-help": "^1.6.0",
+    "gulp-if": "^1.2.5",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-print": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rtlcss": "^0.1.4",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
+    "map-stream": "0.0.6",
+    "react": "^0.13.3",
+    "require-dot-file": "^0.4.0",
+    "semantic-ui": "^2.0.8",
+    "yamljs": "^0.2.3"
   }
 }
