Add particle.js background style

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "map-stream": "0.0.6",
+    "object-assign": "^4.0.0",
+    "particles.js": "^2.0.0",
+    "qs": "^4.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "require-dot-file": "^0.4.0",
