--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router": "^0.13.3",
     "require-dot-file": "^0.4.0",
     "semantic-ui": "^2.0.8",
+    "superagent": "^1.3.0",
     "yamljs": "^0.2.3"
   }
 }
