--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "map-stream": "0.0.6",
+    "md2react": "^0.8.8",
     "object-assign": "^4.0.0",
     "particles.js": "^2.0.0",
     "qs": "^4.0.0",
