--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "particles.js": "^2.0.0",
     "qs": "^4.0.0",
     "react": "^0.13.3",
+    "react-redux": "^1.0.1",
     "react-router": "^0.13.3",
+    "redux": "^1.0.1",
     "require-dot-file": "^0.4.0",
     "semantic-ui": "^2.0.8",
     "superagent": "^1.3.0",
