--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux": "^1.0.1",
     "require-dot-file": "^0.4.0",
     "semantic-ui": "^2.0.8",
+    "socket.io-client": "^1.3.6",
     "superagent": "^1.3.0",
     "yamljs": "^0.2.3"
   }
