Add mplus webfont

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile": "gulp compile",
     "start": "electron .",
     "packager": "electron-packager . TDUCTF-2015 --all --version=0.30.5 --ignore=node_modules/gulp*",
-    "postinstall": "cd semantic && gulp build"
+    "postinstall": "node font_donwloader.js && cd semantic && gulp build"
   },
   "repository": {
     "type": "git",
