--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
   "name": "lepus-frontend",
-  "version": "0.1.0",
+  "version": "0.1.0-web",
   "description": "Lepus-CTF front-end application",
   "main": "app.js",
   "desktopName": "lepus-ctf.desktop",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "gulp compile",
-    "start": "electron .",
-    "package:darwin": "gulp package:darwin",
-    "package:linux:x64": "gulp package:linux:x64",
-    "package:linux:ia32": "gulp package:linux:ia32",
-    "package:win32:x64": "gulp package:win32:x64",
-    "package:win32:ia32": "gulp package:win32:ia32",
-    "package:all": "gulp package:all",
+    "demo": "gulp demo",
     "postinstall": "gulp download:font"
   },
   "repository": {
@@ -35,15 +28,18 @@
     "electron-packager": "^5.0.2",
     "electron-prebuilt": "^0.30.6",
     "gulp-babel": "^5.2.0",
-    "gulp-load-plugins": "^1.0.0-rc.1"
+    "gulp-load-plugins": "^1.0.0-rc.1",
+    "request": "^2.62.0"
   },
   "dependencies": {
+    "babelify": "^6.3.0",
     "better-console": "^0.2.4",
     "cookiejar": "^2.0.1",
     "del": "^1.2.1",
     "extend": "^3.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-chmod": "^1.2.0",
     "gulp-clone": "^1.0.0",
     "gulp-concat": "^2.6.0",
@@ -61,7 +57,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rtlcss": "^0.1.4",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "map-stream": "0.0.6",
@@ -77,6 +73,7 @@
     "semantic-ui-css": "^2.0.8",
     "socket.io-client": "^1.3.6",
     "superagent": "^1.3.0",
+    "vinyl-transform": "^1.0.0",
     "yamljs": "^0.2.3"
   }
 }
